syntax = "proto3";

package hyperlane.igp.v1;

import "cosmos_proto/cosmos.proto";
import "hyperlane/igp/v1/types.proto";

option go_package = "github.com/strangelove-ventures/hyperlane-cosmos/x/igp/types";

// Hyperlane's IGP. An IGP instance always has one relayer beneficiary.
// Each IGP has gas oracles, one oracle for each destination it serves.
// The gas oracle is a cosmos address that is allowed to update gas prices.
message Igp {
  // Only the owner can update the IGP.
  string owner = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  // An owner can own multiple IGPs. This ID is globally unique.
  uint32 igp_id = 2;
  // If a beneficiary is set, it will be paid relayer costs instead of the
  // owner.
  string beneficiary = 3 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // Key is the remote domain of the gas oracle
  map<uint32, GasOracle> oracles = 4;
}