syntax = "proto3";
package hyperlane.ism.v1;

option go_package = "github.com/strangelove-ventures/hyperlane-cosmos/x/ism/types";

// Msg defines the hyperlane ISM Msg service.
service Msg {
  // SetDefaultIsm defines a rpc handler method for MsgSetDefaultIsm.
  rpc SetDefaultIsm(MsgSetDefaultIsm) returns (MsgSetDefaultIsmResponse);
}

// MsgSetDefaultIsm defines the request type for the SetDefaultIsm rpc.
message MsgSetDefaultIsm {
  string signer = 1;
  repeated bytes validator_pub_keys = 2;
  uint32 threshold = 3;
}

// MsgSetDefaultIsmResponse defines the Msg/SetDefaultIsm response type
message MsgSetDefaultIsmResponse {}